--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
     "remotePath": "/home/frontend/workspace",
     "keepFinder": true
   },
+  "jsdoc": true,
   "postcss": {},
   "default": {
     "client": {
