--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deng-npx",
-  "version": "3.0.10",
+  "version": "3.1.0",
   "description": "Pack static files like html, css, javascript, images and so on. Different environment, different variables.",
   "keywords": [
     "front-end",
@@ -96,6 +96,7 @@
     "style-loader": "0.13.1",
     "stylelint": "6.7.1",
     "stylelint-config-standard": "9.0.0",
+    "update-notifier": "https://github.com/dnxbf321/update-notifier.git",
     "url-loader": "0.5.7",
     "vue": "1.0.26",
     "vue-hot-reload-api": "1.3.2",
