--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "extend": "3.0.0",
     "file-loader": "0.8.4",
     "function-bind": "1.0.2",
+    "git-clone": "0.1.0",
     "glob": "7.0.3",
     "handlebars": "^4.0.5",
     "handlebars-loader": "1.3.0",
