--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deng-npx",
-  "version": "3.1.3",
+  "version": "3.1.4",
   "description": "Pack static files like html, css, javascript, images and so on. Different environment, different variables.",
   "keywords": [
     "front-end",
@@ -72,7 +72,7 @@
     "function-bind": "1.0.2",
     "git-clone": "0.1.0",
     "glob": "7.0.3",
-    "handlebars": "^4.0.5",
+    "handlebars": "4.0.5",
     "handlebars-loader": "1.3.0",
     "html-webpack-plugin": "2.21.0",
     "jsdoc-webpack-plugin": "0.0.1",
@@ -97,7 +97,7 @@
     "style-loader": "0.13.1",
     "stylelint": "6.7.1",
     "stylelint-config-standard": "9.0.0",
-    "update-notifier": "https://github.com/dnxbf321/update-notifier.git",
+    "update-notifier": "1.0.2",
     "url-loader": "0.5.7",
     "vue": "1.0.26",
     "vue-hot-reload-api": "1.3.2",
