--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deng-npx",
-  "version": "3.2.3",
+  "version": "3.3.0",
   "description": "Pack static files like html, css, javascript, images and so on. Different environment, different variables.",
   "keywords": [
     "front-end",
@@ -22,6 +22,14 @@
   "license": "MIT",
   "bin": {
     "npx": "bin/index.js"
+  },
+  "scripts": {
+    "reset": "rimraf ../npx-es5 && ncp ../npx ../npx-es5 && rimraf ../npx-es5/node_modules",
+    "compile": "npm-run-all clean --parallel es5-bin es5-scripts es5-eslintrc",
+    "clean": "rimraf ../npx-es5/bin && rimraf ../npx-es5/scripts",
+    "es5-bin": "babel bin -d ../npx-es5/bin",
+    "es5-scripts": "babel scripts -d ../npx-es5/scripts",
+    "es5-eslintrc": "babel .eslintrc.js -o ../npx-es5/.eslintrc.js"
   },
   "scripts-example": {
     "dev": "npm-run-all pre asset image babel-asset-dev --parallel serve-client",
@@ -107,5 +115,9 @@
     "webpack": "1.13.1",
     "webpack-hot-middleware": "2.6.0",
     "webpack-merge": "0.14.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "npm-run-all": "^3.1.0"
   }
 }
