--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
   "presets": ["es2015", "stage-2"],
-  "plugins": ["transform-runtime", "add-module-exports"],
+  "plugins": ["transform-runtime", "add-module-exports", "transform-es3-property-literals", "transform-es3-member-expression-literals"],
   "comments": false
 }
