--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deng-npx",
-  "version": "3.3.0",
+  "version": "3.3.1",
   "description": "Pack static files like html, css, javascript, images and so on. Different environment, different variables.",
   "keywords": [
     "front-end",
@@ -56,17 +56,20 @@
   "dependencies": {
     "archiver": "1.0.0",
     "autoprefixer": "6.3.6",
-    "babel-core": "6.9.1",
-    "babel-loader": "6.2.4",
-    "babel-plugin-add-module-exports": "0.1.4",
+    "babel-core": "6.14.0",
+    "babel-loader": "6.2.5",
+    "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-define": "1.0.0",
-    "babel-plugin-transform-runtime": "6.9.0",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-stage-2": "6.5.0",
-    "babel-runtime": "6.9.2",
+    "babel-plugin-transform-es3-member-expression-literals": "6.8.0",
+    "babel-plugin-transform-es3-property-literals": "6.8.0",
+    "babel-plugin-transform-runtime": "6.15.0",
+    "babel-preset-es2015": "6.14.0",
+    "babel-preset-stage-2": "6.13.0",
+    "babel-runtime": "6.11.6",
     "colors": "1.1.2",
     "css-loader": "0.23.1",
     "cssnano": "3.6.2",
+    "es3ify-loader": "0.2.0",
     "eslint": "2.11.1",
     "eslint-config-standard": "5.3.1",
     "eslint-friendly-formatter": "1.2.2",
