--- a/package.json
+++ b/package.json
@@ -109,9 +109,10 @@
     "stylelint-config-standard": "13.0.2",
     "update-notifier": "1.0.2",
     "url-loader": "0.5.7",
-    "vue": "2.0.3",
-    "vue-hot-reload-api": "2.0.6",
-    "vue-loader": "9.7.0",
+    "vue": "1.0.28",
+    "vue-hot-reload-api": "1.3.3",
+    "vue-html-loader": "1.2.3",
+    "vue-loader": "8.5.4",
     "vue-style-loader": "1.0.0",
     "webpack": "1.13.2",
     "webpack-hot-middleware": "2.13.0",
