--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deng-npx",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "description": "Pack static files like html, css, javascript, images and so on. Different environment, different variables.",
   "keywords": [
     "front-end",
@@ -24,7 +24,7 @@
     "npx": "bin/index.js"
   },
   "scripts": {
-    "reset": "rimraf ../npx-es5 && node bin/copy2es5.js",
+    "reset": "node bin/copy2es5.js",
     "compile": "npm-run-all reset --parallel es5-bin es5-scripts es5-eslintrc",
     "es5-bin": "babel bin -d ../npx-es5/bin",
     "es5-scripts": "babel scripts -d ../npx-es5/scripts",
@@ -58,7 +58,7 @@
     "babel-core": "6.17.0",
     "babel-loader": "6.2.5",
     "babel-plugin-add-module-exports": "0.2.1",
-    "babel-plugin-define": "1.0.0",
+    "babel-plugin-transform-define": "1.2.0",
     "babel-plugin-transform-es3-member-expression-literals": "6.8.0",
     "babel-plugin-transform-es3-property-literals": "6.8.0",
     "babel-plugin-transform-runtime": "6.15.0",
@@ -91,6 +91,7 @@
     "koa-connect-history-api-fallback": "0.3.0",
     "koa-static": "2.0.0",
     "koa-webpack-dev-middleware": "1.2.2",
+    "left-pad": "^1.1.3",
     "mkdirp": "0.5.1",
     "moment": "2.15.1",
     "ncp": "2.0.0",
