--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deng-npx",
-  "version": "4.1.1",
+  "version": "4.1.2",
   "description": "Pack static files like html, css, javascript, images and so on. Different environment, different variables.",
   "keywords": [
     "front-end",
@@ -53,70 +53,70 @@
     "clean": "npx clean"
   },
   "dependencies": {
-    "archiver": "1.1.0",
-    "autoprefixer": "6.5.1",
-    "babel-core": "6.18.0",
-    "babel-loader": "6.2.5",
+    "archiver": "^1.1.0",
+    "autoprefixer": "^6.5.1",
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.5",
     "babel-plugin-add-module-exports": "0.2.1",
-    "babel-plugin-transform-es3-member-expression-literals": "6.8.0",
-    "babel-plugin-transform-es3-property-literals": "6.8.0",
-    "babel-plugin-transform-runtime": "6.15.0",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-stage-2": "6.18.0",
-    "babel-runtime": "6.18.0",
-    "colors": "1.1.2",
-    "css-loader": "0.25.0",
-    "cssnano": "3.8.0",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
+    "babel-plugin-transform-es3-property-literals": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "babel-runtime": "^6.18.0",
+    "colors": "^1.1.2",
+    "css-loader": "^0.25.0",
+    "cssnano": "^3.8.0",
     "es3ify-loader": "0.2.0",
-    "eslint": "3.8.1",
-    "eslint-config-standard": "6.2.0",
-    "eslint-friendly-formatter": "2.0.6",
-    "eslint-loader": "1.6.0",
-    "eslint-plugin-html": "1.5.3",
-    "eslint-plugin-promise": "3.0.0",
-    "eslint-plugin-standard": "2.0.1",
+    "eslint": "^3.8.1",
+    "eslint-config-standard": "^6.2.0",
+    "eslint-friendly-formatter": "^2.0.6",
+    "eslint-loader": "^1.6.0",
+    "eslint-plugin-html": "^1.5.3",
+    "eslint-plugin-promise": "^3.0.0",
+    "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "0.9.6",
-    "extend": "3.0.0",
-    "file-loader": "0.9.0",
+    "extend": "^3.0.0",
+    "file-loader": "^0.9.0",
     "function-bind": "1.1.0",
     "git-clone": "0.1.0",
-    "glob": "7.1.1",
-    "handlebars": "4.0.5",
-    "handlebars-loader": "1.4.0",
-    "html-webpack-plugin": "2.22.0",
+    "glob": "^7.1.1",
+    "handlebars": "^4.0.5",
+    "handlebars-loader": "^1.4.0",
+    "html-webpack-plugin": "^2.22.0",
     "jsdoc-webpack-plugin": "0.0.1",
     "json-loader": "0.5.4",
-    "koa": "1.2.4",
+    "koa": "^1.2.4",
     "koa-connect-history-api-fallback": "0.3.0",
-    "koa-static": "2.0.0",
-    "koa-webpack-dev-middleware": "1.2.2",
-    "left-pad": "1.1.3",
-    "mkdirp": "0.5.1",
-    "moment": "2.15.1",
-    "ncp": "2.0.0",
-    "postcss-assets": "4.1.0",
-    "postcss-cli": "2.6.0",
-    "postcss-easy-import": "1.0.1",
-    "postcss-loader": "1.0.0",
-    "postcss-pxtorem": "3.3.1",
-    "postcss-reporter": "1.4.1",
-    "precss": "1.4.0",
-    "rimraf": "2.5.4",
-    "rucksack-css": "0.8.6",
-    "scp2": "0.5.0",
-    "style-loader": "0.13.1",
-    "stylelint": "7.4.2",
-    "stylelint-config-standard": "13.0.2",
-    "update-notifier": "1.0.2",
-    "url-loader": "0.5.7",
-    "vue": "2.0.3",
-    "vue-hot-reload-api": "2.0.6",
-    "vue-html-loader": "1.2.3",
-    "vue-loader": "9.7.0",
-    "vue-style-loader": "1.0.0",
-    "webpack": "1.13.2",
-    "webpack-hot-middleware": "2.13.0",
-    "webpack-merge": "0.14.1"
+    "koa-static": "^2.0.0",
+    "koa-webpack-dev-middleware": "^1.2.2",
+    "left-pad": "^1.1.3",
+    "mkdirp": "^0.5.1",
+    "moment": "^2.15.1",
+    "ncp": "^2.0.0",
+    "postcss-assets": "^4.1.0",
+    "postcss-cli": "^2.6.0",
+    "postcss-easy-import": "^1.0.1",
+    "postcss-loader": "^1.0.0",
+    "postcss-pxtorem": "^3.3.1",
+    "postcss-reporter": "^1.4.1",
+    "precss": "^1.4.0",
+    "rimraf": "^2.5.4",
+    "rucksack-css": "^0.8.6",
+    "scp2": "^0.5.0",
+    "style-loader": "^0.13.1",
+    "stylelint": "^7.4.2",
+    "stylelint-config-standard": "^13.0.2",
+    "update-notifier": "^1.0.2",
+    "url-loader": "^0.5.7",
+    "vue": "^2.0.3",
+    "vue-hot-reload-api": "^2.0.6",
+    "vue-html-loader": "^1.2.3",
+    "vue-loader": "^9.7.0",
+    "vue-style-loader": "^1.0.0",
+    "webpack": "^1.13.2",
+    "webpack-hot-middleware": "^2.13.0",
+    "webpack-merge": "^0.14.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
