--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deng-npx",
-  "version": "4.1.8",
+  "version": "4.1.9",
   "description": "Pack static files like html, css, javascript, images and so on. Different environment, different variables.",
   "keywords": [
     "front-end",
@@ -54,22 +54,22 @@
   },
   "dependencies": {
     "archiver": "^1.1.0",
-    "autoprefixer": "^6.5.1",
-    "babel-core": "^6.18.0",
+    "autoprefixer": "^6.7.0",
+    "babel-core": "^6.22.1",
     "babel-loader": "^6.2.5",
     "babel-plugin-add-module-exports": "0.2.1",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
-    "babel-plugin-transform-es3-property-literals": "^6.8.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-2": "^6.18.0",
-    "babel-runtime": "^6.18.0",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
+    "babel-plugin-transform-es3-property-literals": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-runtime": "^6.22.0",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.26.1",
     "cssnano": "^3.8.0",
     "es3ify-loader": "0.2.0",
-    "eslint": "^3.8.1",
+    "eslint": "^3.14.0",
     "eslint-config-standard": "^6.2.0",
     "eslint-friendly-formatter": "^2.0.6",
     "eslint-loader": "^1.6.0",
@@ -85,7 +85,7 @@
     "handlebars": "^4.0.5",
     "handlebars-loader": "^1.4.0",
     "html-webpack-plugin": "^2.22.0",
-    "jsdoc-webpack-plugin": "0.0.1",
+    "jsdoc-webpack-plugin": "0.0.2",
     "json-loader": "0.5.4",
     "koa": "^1.2.4",
     "koa-connect-history-api-fallback": "0.3.0",
@@ -97,31 +97,32 @@
     "ncp": "^2.0.0",
     "postcss-assets": "^4.1.0",
     "postcss-cli": "^2.6.0",
-    "postcss-easy-import": "^1.0.1",
-    "postcss-loader": "^1.0.0",
-    "postcss-pxtorem": "^3.3.1",
-    "postcss-reporter": "^1.4.1",
+    "postcss-easy-import": "^2.0.0",
+    "postcss-loader": "^1.2.2",
+    "postcss-pxtorem": "^4.0.0",
+    "postcss-reporter": "^3.0.0",
     "precss": "^1.4.0",
     "progress-bar-webpack-plugin": "^1.9.3",
     "rimraf": "^2.5.4",
-    "rucksack-css": "^0.8.6",
+    "rucksack-css": "^0.9.1",
     "scp2": "^0.5.0",
     "style-loader": "^0.13.1",
     "stylelint": "^7.4.2",
-    "stylelint-config-standard": "^13.0.2",
+    "stylelint-config-standard": "^15.0.1",
     "update-notifier": "^1.0.2",
     "url-loader": "^0.5.7",
-    "vue": "^2.0.3",
-    "vue-hot-reload-api": "^2.0.6",
+    "vue": "^2.1.10",
+    "vue-hot-reload-api": "^2.0.8",
     "vue-html-loader": "^1.2.3",
-    "vue-loader": "^9.7.0",
+    "vue-loader": "^10.0.2",
     "vue-style-loader": "^1.0.0",
+    "vue-template-compiler": "^2.1.10",
     "webpack": "^1.13.2",
     "webpack-hot-middleware": "^2.13.0",
-    "webpack-merge": "^0.14.1"
+    "webpack-merge": "^2.4.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "npm-run-all": "^3.1.1"
+    "babel-cli": "^6.22.2",
+    "npm-run-all": "^4.0.1"
   }
 }
