不再支持 import css 文件，css 应该在 js 前引入

--- a/package.json
+++ b/package.json
@@ -95,8 +95,8 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.15.1",
     "ncp": "^2.0.0",
+    "postcss": "^5.2.11",
     "postcss-assets": "^4.1.0",
-    "postcss-cli": "^2.6.0",
     "postcss-easy-import": "^2.0.0",
     "postcss-loader": "^1.2.2",
     "postcss-pxtorem": "^4.0.0",
