--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,6 @@
   "presets": [["es2015", {
     "module": false
   }], "stage-2"],
-  "plugins": ["transform-runtime", "add-module-exports", "transform-es3-property-literals", "transform-es3-member-expression-literals"],
+  "plugins": ["transform-runtime", "add-module-exports"],
   "comments": false
 }
