支持关闭模板自动注入 js 功能

--- a/config.json
+++ b/config.json
@@ -9,6 +9,11 @@
   },
   "jsdoc": true,
   "postcss": {},
+  "webpack": {
+    "banner": "@copyright ",
+    "no-common": false,
+    "no-html-inject": false
+  },
   "default": {
     "client": {
       "port": 9000,
