--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deng-npx",
-  "version": "4.4.2",
+  "version": "5.0.0",
   "description": "Pack static files like html, css, javascript, images and so on. Different environment, different variables.",
   "keywords": [
     "front-end",
@@ -53,66 +53,59 @@
     "clean": "npx clean"
   },
   "dependencies": {
-    "archiver": "^1.1.0",
-    "autoprefixer": "^6.7.6",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
+    "archiver": "^2.0.3",
+    "autoprefixer": "^7.1.3",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-runtime": "^6.23.0",
+    "babel-runtime": "^6.26.0",
     "colors": "^1.1.2",
-    "commander": "^2.9.0",
-    "css-loader": "^0.26.2",
+    "commander": "^2.11.0",
+    "css-loader": "^0.28.7",
     "cssnano": "^3.8.0",
-    "eslint": "^3.16.1",
-    "eslint-config-standard": "^7.0.0",
-    "eslint-friendly-formatter": "^2.0.6",
-    "eslint-loader": "^1.6.3",
-    "eslint-plugin-html": "^1.5.3",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^2.1.1",
+    "eslint": "^4.6.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.9.0",
     "eventsource-polyfill": "^0.9.6",
     "extend": "^3.0.0",
-    "file-loader": "^0.9.0",
-    "function-bind": "1.1.0",
+    "file-loader": "^0.11.2",
+    "function-bind": "^1.1.1",
     "git-clone": "0.1.0",
     "glob": "^7.1.1",
     "handlebars": "^4.0.5",
-    "handlebars-loader": "^1.4.0",
-    "html-webpack-plugin": "^2.28.0",
+    "handlebars-loader": "^1.6.0",
+    "html-webpack-plugin": "^2.30.1",
     "jsdoc-webpack-plugin": "0.0.2",
-    "koa": "^1.2.5",
-    "koa-connect-history-api-fallback": "0.3.0",
-    "koa-static": "^2.1.0",
-    "koa-webpack-dev-middleware": "^1.4.4",
+    "koa": "^2.3.0",
+    "koa-static": "^4.0.1",
+    "koa-webpack-middleware": "^1.0.7",
+    "koa2-history-api-fallback": "^0.0.5",
     "left-pad": "^1.1.3",
     "mkdirp": "^0.5.1",
     "moment": "^2.15.1",
     "ncp": "^2.0.0",
-    "postcss": "^5.2.15",
-    "postcss-assets": "^4.1.0",
+    "postcss": "^6.0.10",
+    "postcss-assets": "^5.0.0",
     "postcss-easy-import": "^2.0.0",
-    "postcss-loader": "^1.3.3",
+    "postcss-loader": "^2.0.6",
     "postcss-pxtorem": "^4.0.0",
-    "postcss-reporter": "^3.0.0",
-    "precss": "^1.4.0",
-    "progress-bar-webpack-plugin": "^1.9.3",
+    "postcss-reporter": "^5.0.0",
+    "precss": "^2.0.0",
+    "progress-bar-webpack-plugin": "^1.10.0",
     "rimraf": "^2.6.1",
-    "rucksack-css": "^0.9.1",
+    "rucksack-css": "^1.0.2",
     "scp2": "^0.5.0",
-    "style-loader": "^0.13.2",
-    "stylelint": "^7.9.0",
-    "stylelint-config-standard": "^15.0.1",
-    "update-notifier": "^1.0.2",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.2.1",
-    "webpack-hot-middleware": "^2.17.1",
-    "webpack-merge": "^2.6.1"
+    "style-loader": "^0.18.2",
+    "update-notifier": "^2.2.0",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.5",
+    "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "npm-run-all": "^4.0.2"
+    "babel-cli": "^6.26.0",
+    "npm-run-all": "^4.1.1"
   }
 }
