--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "deng-npx",
-  "version": "5.0.1",
-  "description": "Pack static files like html, css, javascript, images and so on. Different environment, different variables.",
+  "version": "5.0.2",
+  "description":
+    "Pack static files like html, css, javascript, images and so on. Different environment, different variables.",
   "keywords": [
     "front-end",
     "pack static files",
