--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "postcss-reporter": "^5.0.0",
     "precss": "^2.0.0",
     "progress-bar-webpack-plugin": "^1.10.0",
+    "require-uncached": "^1.0.3",
     "rimraf": "^2.6.1",
     "rucksack-css": "^1.0.2",
     "scp2": "^0.5.0",
