--- a/package.json
+++ b/package.json
@@ -1,113 +1,105 @@
 {
-  "name": "deng-npx",
-  "version": "5.0.2",
-  "description":
-    "Pack static files like html, css, javascript, images and so on. Different environment, different variables.",
-  "keywords": [
-    "front-end",
-    "pack static files",
-    "scaffold",
-    "postcss",
-    "sass-like",
-    "ECMAScript 6",
-    "webpack",
-    "babel"
-  ],
-  "main": "bin/index.js",
-  "homepage": "https://github.com/dnxbf321/npx#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://dnxbf321@github.com/dnxbf321/npx.git"
-  },
-  "author": "Jason Deng",
-  "license": "MIT",
-  "bin": {
-    "npx": "bin/index.js"
-  },
-  "scripts": {
-    "reset": "node bin/copy2es5.js",
-    "compile": "npm-run-all reset --parallel es5-bin es5-scripts es5-eslintrc",
-    "es5-bin": "babel bin -d ../npx-es5/bin",
-    "es5-scripts": "babel scripts -d ../npx-es5/scripts",
-    "es5-eslintrc": "babel .eslintrc.js -o ../npx-es5/.eslintrc.js"
-  },
-  "scripts-example": {
-    "dev": "npx -t pre,asset,babel-asset,image,serve-client -e development",
-    "build-dev": "npx -t pre,asset,babel-asset,image,webpack,postcss -e development",
-    "build-exp": "npx -t pre,asset,babel-asset,image,webpack,postcss -e experiment",
-    "build": "npx -t pre,asset,babel-asset,image,webpack,postcss -e production",
-    "serve-client": "npx serve-client -e development",
-    "pre": "npx pre",
-    "webpack-dev": "npx webpack -e development",
-    "webpack-exp": "npx webpack -e experiment",
-    "webpack": "npx webpack -e production",
-    "postcss-dev": "npx postcss -e development",
-    "postcss-exp": "npx postcss -e experiment",
-    "postcss": "npx postcss -e production",
-    "babel-asset-dev": "npx babel-asset -e development",
-    "babel-asset-exp": "npx babel-asset -e experiment",
-    "babel-asset": "npx babel-asset -e production",
-    "asset": "npx asset",
-    "image": "npx image",
-    "pack": "npx pack",
-    "upload": "npx upload",
-    "clean": "npx clean"
-  },
-  "dependencies": {
-    "archiver": "^2.0.3",
-    "autoprefixer": "^7.1.3",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-add-module-exports": "0.2.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-runtime": "^6.26.0",
-    "colors": "^1.1.2",
-    "commander": "^2.11.0",
-    "css-loader": "^0.28.7",
-    "cssnano": "^3.8.0",
-    "eslint": "^4.6.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.9.0",
-    "eventsource-polyfill": "^0.9.6",
-    "extend": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "function-bind": "^1.1.1",
-    "git-clone": "0.1.0",
-    "glob": "^7.1.1",
-    "handlebars": "^4.0.5",
-    "handlebars-loader": "^1.6.0",
-    "html-webpack-plugin": "^2.30.1",
-    "jsdoc-webpack-plugin": "0.0.2",
-    "koa": "^2.3.0",
-    "koa-static": "^4.0.1",
-    "koa-webpack-middleware": "^1.0.7",
-    "koa2-history-api-fallback": "^0.0.5",
-    "left-pad": "^1.1.3",
-    "mkdirp": "^0.5.1",
-    "moment": "^2.15.1",
-    "ncp": "^2.0.0",
-    "postcss": "^6.0.10",
-    "postcss-assets": "^5.0.0",
-    "postcss-easy-import": "^2.0.0",
-    "postcss-loader": "^2.0.6",
-    "postcss-pxtorem": "^4.0.0",
-    "postcss-reporter": "^5.0.0",
-    "precss": "^2.0.0",
-    "progress-bar-webpack-plugin": "^1.10.0",
-    "require-uncached": "^1.0.3",
-    "rimraf": "^2.6.1",
-    "rucksack-css": "^1.0.2",
-    "scp2": "^0.5.0",
-    "style-loader": "^0.18.2",
-    "update-notifier": "^2.2.0",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.5.5",
-    "webpack-merge": "^4.1.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "npm-run-all": "^4.1.1"
-  }
+    "name": "deng-npx",
+    "version": "5.1.0",
+    "description": "Pack static files like html, css, javascript, images and so on. Different environment, different variables.",
+    "keywords": [
+        "front-end",
+        "pack static files",
+        "scaffold",
+        "postcss",
+        "sass-like",
+        "ECMAScript 6",
+        "webpack",
+        "babel"
+    ],
+    "main": "bin/program.js",
+    "homepage": "https://github.com/dnxbf321/npx#readme",
+    "repository": {
+        "type": "git",
+        "url": "git+https://dnxbf321@github.com/dnxbf321/npx.git"
+    },
+    "author": "Jason Deng",
+    "license": "MIT",
+    "bin": {
+        "npx": "bin/program.js"
+    },
+    "scripts-example": {
+        "dev": "npx -t pre,asset,babel-asset,image,serve-client -e development",
+        "build-dev": "npx -t pre,asset,babel-asset,image,webpack,postcss -e development",
+        "build-exp": "npx -t pre,asset,babel-asset,image,webpack,postcss -e experiment",
+        "build": "npx -t pre,asset,babel-asset,image,webpack,postcss -e production",
+        "serve-client": "npx serve-client -e development",
+        "pre": "npx pre",
+        "webpack-dev": "npx webpack -e development",
+        "webpack-exp": "npx webpack -e experiment",
+        "webpack": "npx webpack -e production",
+        "postcss-dev": "npx postcss -e development",
+        "postcss-exp": "npx postcss -e experiment",
+        "postcss": "npx postcss -e production",
+        "babel-asset-dev": "npx babel-asset -e development",
+        "babel-asset-exp": "npx babel-asset -e experiment",
+        "babel-asset": "npx babel-asset -e production",
+        "asset": "npx asset",
+        "image": "npx image",
+        "pack": "npx pack",
+        "upload": "npx upload",
+        "clean": "npx clean"
+    },
+    "dependencies": {
+        "archiver": "^2.0.3",
+        "autoprefixer": "^7.1.3",
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
+        "babel-plugin-add-module-exports": "0.2.1",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-preset-es2015": "^6.22.0",
+        "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-2": "^6.22.0",
+        "babel-runtime": "^6.26.0",
+        "colors": "^1.1.2",
+        "commander": "^2.11.0",
+        "css-loader": "^0.28.7",
+        "cssnano": "^3.8.0",
+        "eslint": "^4.6.1",
+        "eslint-friendly-formatter": "^3.0.0",
+        "eslint-loader": "^1.9.0",
+        "eventsource-polyfill": "^0.9.6",
+        "extend": "^3.0.0",
+        "file-loader": "^0.11.2",
+        "function-bind": "^1.1.1",
+        "git-clone": "0.1.0",
+        "glob": "^7.1.1",
+        "handlebars": "^4.0.5",
+        "handlebars-loader": "^1.6.0",
+        "html-webpack-plugin": "^2.30.1",
+        "jsdoc-webpack-plugin": "0.0.2",
+        "koa": "^2.3.0",
+        "koa-static": "^4.0.1",
+        "koa-webpack-middleware": "^1.0.7",
+        "koa2-history-api-fallback": "^0.0.5",
+        "left-pad": "^1.1.3",
+        "mkdirp": "^0.5.1",
+        "moment": "^2.15.1",
+        "ncp": "^2.0.0",
+        "postcss": "^6.0.10",
+        "postcss-assets": "^5.0.0",
+        "postcss-easy-import": "^2.0.0",
+        "postcss-loader": "^2.0.6",
+        "postcss-pxtorem": "^4.0.0",
+        "postcss-reporter": "^5.0.0",
+        "precss": "^2.0.0",
+        "progress-bar-webpack-plugin": "^1.10.0",
+        "react": "^16.2.0",
+        "react-hot-loader": "^3.1.3",
+        "require-uncached": "^1.0.3",
+        "rimraf": "^2.6.1",
+        "rucksack-css": "^1.0.2",
+        "scp2": "^0.5.0",
+        "style-loader": "^0.18.2",
+        "update-notifier": "^2.2.0",
+        "url-loader": "^0.5.9",
+        "webpack": "^3.5.5",
+        "webpack-hot-middleware": "^2.21.0",
+        "webpack-merge": "^4.1.0"
+    }
 }
