--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "deng-npx",
-    "version": "5.1.0",
-    "description": "Pack static files like html, css, javascript, images and so on. Different environment, different variables.",
+    "version": "5.1.1",
+    "description":
+        "Pack static files like html, css, javascript, images and so on. Different environment, different variables.",
     "keywords": [
         "front-end",
         "pack static files",
@@ -46,21 +47,21 @@
         "clean": "npx clean"
     },
     "dependencies": {
-        "archiver": "^2.0.3",
-        "autoprefixer": "^7.1.3",
+        "archiver": "^2.1.1",
+        "autoprefixer": "^7.2.5",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
         "babel-plugin-add-module-exports": "0.2.1",
         "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-preset-es2015": "^6.22.0",
+        "babel-preset-env": "^1.6.1",
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-2": "^6.22.0",
         "babel-runtime": "^6.26.0",
         "colors": "^1.1.2",
-        "commander": "^2.11.0",
-        "css-loader": "^0.28.7",
+        "commander": "^2.13.0",
+        "css-loader": "^0.28.9",
         "cssnano": "^3.8.0",
-        "eslint": "^4.6.1",
+        "eslint": "^4.16.0",
         "eslint-friendly-formatter": "^3.0.0",
         "eslint-loader": "^1.9.0",
         "eventsource-polyfill": "^0.9.6",
@@ -79,12 +80,12 @@
         "koa2-history-api-fallback": "^0.0.5",
         "left-pad": "^1.1.3",
         "mkdirp": "^0.5.1",
-        "moment": "^2.15.1",
+        "moment": "^2.20.1",
         "ncp": "^2.0.0",
-        "postcss": "^6.0.10",
+        "postcss": "^6.0.16",
         "postcss-assets": "^5.0.0",
         "postcss-easy-import": "^2.0.0",
-        "postcss-loader": "^2.0.6",
+        "postcss-loader": "^2.0.10",
         "postcss-pxtorem": "^4.0.0",
         "postcss-reporter": "^5.0.0",
         "precss": "^2.0.0",
