--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,17 @@
 {
-  "presets": [["es2015", {
-    "module": false
-  }], "stage-2", "react"],
+  "presets": [["env", {
+    "targets": {
+      "browsers": [
+        "last 2 versions",
+        "> 5%",
+        "safari >= 8",
+        "ie >= 10",
+        "Firefox ESR",
+        "iOS >= 8",
+        "android >= 4"
+      ]
+    }
+  }], "react", "stage-2"],
   "plugins": ["transform-runtime", "add-module-exports", "react-hot-loader/babel"],
   "comments": false
 }
