--- a/example/vue@1/package.json
+++ b/example/vue@1/package.json
@@ -23,8 +23,10 @@
     "autoprefixer": "^6.7.6",
     "css-loader": "^0.26.2",
     "cssnano": "^3.10.0",
-    "postcss-assets": "^4.1.0",
-    "postcss-easy-import": "^2.0.0",
+    "postcss-assets": "^5.0.0",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-pxtorem": "^4.0.0",
+    "postcss-reporter": "^5.0.0",
     "precss": "^1.4.0",
     "rucksack-css": "^0.9.1",
     "vue-hot-reload-api": "^1.3.3",
