--- a/package.json
+++ b/package.json
@@ -50,61 +50,56 @@
     },
     "dependencies": {
         "archiver": "^2.1.1",
-        "autoprefixer": "^7.2.5",
+        "autoprefixer": "^8.3.0",
         "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.2",
-        "babel-plugin-add-module-exports": "0.2.1",
+        "babel-loader": "^7.1.4",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-env": "^1.6.1",
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-2": "^6.22.0",
         "babel-runtime": "^6.26.0",
-        "colors": "^1.1.2",
-        "commander": "^2.13.0",
-        "css-loader": "^0.28.9",
+        "colors": "^1.2.1",
+        "commander": "^2.15.1",
+        "css-loader": "^0.28.11",
         "cssnano": "^3.8.0",
         "decompress-zip": "^0.3.1",
-        "eslint": "^4.16.0",
-        "eslint-friendly-formatter": "^3.0.0",
-        "eslint-loader": "^1.9.0",
+        "eslint": "^4.19.1",
+        "eslint-friendly-formatter": "^4.0.1",
+        "eslint-loader": "^2.0.0",
         "eventsource-polyfill": "^0.9.6",
         "extend": "^3.0.0",
-        "file-loader": "^1.1.6",
+        "file-loader": "^1.1.11",
         "function-bind": "^1.1.1",
         "glob": "^7.1.1",
         "handlebars": "^4.0.5",
-        "handlebars-loader": "^1.6.0",
-        "html-webpack-plugin": "^2.30.1",
+        "handlebars-loader": "^1.7.0",
+        "html-webpack-plugin": "^3.2.0",
         "inquirer": "^5.2.0",
         "jsdoc-webpack-plugin": "0.0.2",
-        "koa": "^2.3.0",
-        "koa-static": "^4.0.1",
-        "koa-webpack-middleware": "^1.0.7",
-        "koa2-history-api-fallback": "^0.0.5",
-        "left-pad": "^1.1.3",
+        "left-pad": "^1.3.0",
         "mkdirp": "^0.5.1",
-        "moment": "^2.20.1",
         "ncp": "^2.0.0",
         "npx-handlebars-inject-loader": "^1.0.0",
-        "postcss": "^6.0.16",
+        "postcss": "^6.0.21",
         "postcss-assets": "^5.0.0",
         "postcss-easy-import": "^3.0.0",
-        "postcss-loader": "^2.0.10",
+        "postcss-loader": "^2.1.4",
         "postcss-pxtorem": "^4.0.0",
         "postcss-reporter": "^5.0.0",
-        "precss": "^2.0.0",
-        "progress-bar-webpack-plugin": "^1.10.0",
-        "react": "^16.2.0",
-        "react-hot-loader": "^3.1.3",
+        "precss": "^3.1.2",
+        "progress-bar-webpack-plugin": "^1.11.0",
+        "react": "^16.3.2",
+        "react-hot-loader": "^4.1.1",
         "require-uncached": "^1.0.3",
         "rimraf": "^2.6.1",
         "rucksack-css": "^1.0.2",
         "scp2": "^0.5.0",
-        "style-loader": "^0.19.1",
-        "update-notifier": "^2.2.0",
-        "url-loader": "^0.6.2",
-        "webpack": "^3.5.5",
-        "webpack-hot-middleware": "^2.21.0",
-        "webpack-merge": "^4.1.0"
+        "style-loader": "^0.21.0",
+        "uglifyjs-webpack-plugin": "^1.2.5",
+        "update-notifier": "^2.5.0",
+        "url-loader": "^1.0.1",
+        "webpack": "^4.6.0",
+        "webpack-dev-server": "^3.1.3",
+        "webpack-merge": "^4.1.2"
     }
 }
