--- a/example/normal(react)/package.json
+++ b/example/normal(react)/package.json
@@ -1,7 +1,7 @@
 {
   "name": "normal(react)",
-  "version": "6.0.0",
-  "description": "official template for npx",
+  "version": "1.0.0",
+  "description": "description goes here",
   "main": "index.js",
   "scripts": {
     "dev": "npx -t pre,asset,image,babel-asset,serve-client -e development",
