--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "deng-npx",
     "version": "6.0.0",
-    "description": "Pack static files like html, css, javascript, images and so on. Different environment, different variables.",
+    "description":
+        "Pack static files like html, css, javascript, images and so on. Different environment, different variables.",
     "keywords": [
         "front-end",
         "pack static files",
@@ -25,28 +26,6 @@
     },
     "scripts": {
         "compress": "node compress-template.js"
-    },
-    "scripts-example": {
-        "dev": "npx -t pre,asset,babel-asset,image,serve-client -e development",
-        "build-dev": "npx -t pre,asset,babel-asset,image,webpack,postcss -e development",
-        "build-exp": "npx -t pre,asset,babel-asset,image,webpack,postcss -e experiment",
-        "build": "npx -t pre,asset,babel-asset,image,webpack,postcss -e production",
-        "serve-client": "npx serve-client -e development",
-        "pre": "npx pre",
-        "webpack-dev": "npx webpack -e development",
-        "webpack-exp": "npx webpack -e experiment",
-        "webpack": "npx webpack -e production",
-        "postcss-dev": "npx postcss -e development",
-        "postcss-exp": "npx postcss -e experiment",
-        "postcss": "npx postcss -e production",
-        "babel-asset-dev": "npx babel-asset -e development",
-        "babel-asset-exp": "npx babel-asset -e experiment",
-        "babel-asset": "npx babel-asset -e production",
-        "asset": "npx asset",
-        "image": "npx image",
-        "pack": "npx pack",
-        "upload": "npx upload",
-        "clean": "npx clean"
     },
     "dependencies": {
         "archiver": "^2.1.1",
